# rust-tutor-mcp

./: Cargo.toml
.claude/: settings.local.json
src/: claude.rs  docs_rs.rs  main.rs  man.rs  server.rs  store.rs  watcher.rs
src/tools/: check_crate_docs.rs  get_changes_by_change_id.rs  get_file_changes.rs  get_man_page.rs  get_scaffold.rs  list_recent_change_ids.rs  list_scaffolds.rs  mod.rs  review_file.rs  save_scaffold.rs  scaffold.rs
